# self-learn-python-project

./: .gitignore  .pre-commit-config.yaml  README.en.md  README.md  package-lock.json  pyproject.toml
Cython/: README.md  (+2 more)
acrobatics/qrcode/: README.md  pyproject.toml
acrobatics/qrcode/amzqr_demo/: README.md  base.ipynb
acrobatics/qrcode/pyzbar_demo/: README.md  base.ipynb
acrobatics/qrcode/qrcode_demo/: README.md  base.ipynb
crawler/my_playwright/: README.md  pyproject.toml  requirements.txt
crawler/my_playwright/hello_world_demo/: api_request_context.py  api_request_mock_har.py  api_request_route.py  authentication.py  codegen.ipynb  custom_selector.py  emulation.py  events.py  frame.py  global_wait.py  hello_world.py  multi_threaded.py  trace_viewer.py  video.py
crawler/my_playwright/integration_docker/: README.md
crawler/my_playwright/tool/: playwright_codegen.sh
cryptography/cryptography_demo/: README.md  base.ipynb  pyproject.toml
cryptography/pycryptodome_demo/: README.md  aes.ipynb  pyproject.toml
data_analysis/: README.md  pyproject.toml  requirements.txt
data_analysis/data_analysis_hello_world/: README.md  requirements.txt
data_analysis/data_analysis_hello_world/array/: __init__.py  array_attribute.py  array_index_and_slice.py  array_other_func.py  base_variable.py  matrix.py  multidimensional_array.py  one_dimensional_array.py  operation.py  test.py  two_dimensional_array.py
data_analysis/data_analysis_hello_world/data_type/: numpy_data_type.py
data_analysis/data_analysis_hello_world/dataframe/: data_clean.ipynb  dataframe_FAQ.py  dataframe_base.py  dataframe_data_analysis.py  dataframe_data_clean.py  dataframe_index.py  dataframe_rolling.py  get_dataframe_from_file.py  get_dataframe_other_channel.py
data_analysis/data_analysis_hello_world/matplotlib_draw/: base.py  base_api.py  base_chart.py  rose.py
data_analysis/data_analysis_hello_world/series/: series_base.py  series_draw_chart.py
data_analysis/exercises/: 100_Numpy_exercises.ipynb
data_analysis/matplotlib_api/: base_api.py  base_chart.py  dataframe_draw.py  rose.py
data_analysis/my_plotly/: README.md  area_chat.ipynb  bar_chat.ipynb  gantt.ipynb  hello_plotly.py  line_chat.ipynb  requirements.txt  scatter_plot.ipynb
data_analysis/my_plotly/chat_demo/: area_chat.ipynb  bar_chat.ipynb  gantt.ipynb  histogram.ipynb  line_chat.ipynb  pie.ipynb  table.ipynb
data_analysis/my_plotly/feature_test/: multi_axis_chart.ipynb  save_chat_to_local.ipynb  sub_chat.ipynb
data_analysis/my_pyecharts/: README.md  hello_world.py
data_analysis/my_seaborn/: README.md  hello_world.py
data_analysis/numpy_api/: README.md  constants.ipynb  numpy_constants.ipynb  numpy_feature.ipynb
data_analysis/numpy_api/array/: array_calculate.ipynb  array_index_and_slice.py  array_slicing.ipynb  base.ipynb  dimension.ipynb  matrix.py  multidimensional_array.py  operation.py  two_dimensional_array.py
data_analysis/numpy_api/exercises/: 100_numpy_exercises.ipynb
data_analysis/numpy_api/scene/: advanced_math.ipynb  finance.ipynb
data_analysis/pandas_api/: README.md
data_analysis/pandas_api/arrow/: README.md  requirements.txt
data_analysis/pandas_api/dataframe/: FAQ.ipynb  agg.ipynb  base.ipynb  create_dataframe_from_third.ipynb  custom_config.ipynb  data_analysis.ipynb  data_clean.ipynb  dataframe_base.py  dataframe_data_analysis.py  dataframe_iter.py  dataframe_window.py  groupby.ipynb  import_and_export.ipynb  import_export_convert.ipynb  index.ipynb  iteration.ipynb  moving_calculate.ipynb  rolling.ipynb  row_column_reshaped.ipynb
data_analysis/pandas_api/series/: __init__.py  base.ipynb  rolling.ipynb  series_draw.py  series_rolling.py
data_analysis/polars_api/: FAQ.ipynb  README.md  base.ipynb  import_and_export.ipynb
data_analysis/polars_api/DataFrame/: base.ipynb  import_and_export.ipynb  lazy_api.ipynb
data_analysis/polars_api/Series/: base.ipynb
data_analysis/polars_api/extension/: README.md
data_analysis/pygwalker_api/: README.md  base.ipynb
data_analysis/pygwalker_api/with_streamlit/: README.md  pygwalker_with_streamlit.py
data_analysis/streamlit/: README.md  streamlit_app.py
data_analysis/ydata_profiling/: README.md
data_analysis/ydata_profiling/quick_start/: compare.ipynb  quick_start_demo.ipynb  quick_start_demo.py  time_series.ipynb
deep_learning/audio/fast_whisper_demo/: README.md  pyproject.toml  quick_start.ipynb
deep_learning/audio/whisper_demo/: README.md  pyproject.toml  quick_start.ipynb
deep_learning/langchain_demo/: README.md  chat.ipynb  pyproject.toml
finance/ccxt_demo/: README.md  async_support.ipynb  base.ipynb  cctxpro.ipynb  draw_trend.ipynb  implicit_api.ipynb  need_api_key_method.ipynb  private_api.ipynb  public_api.ipynb  pyproject.toml
finance/ccxt_demo/useage/: draw_trend.ipynb
finance/currencyconverter_demo/: README.md  base.py  pyproject.toml
media/ffmpeg_python_demo/: README.md  base.ipynb  pyproject.toml  quick_start.ipynb
media/ffmpeg_with_whisper/: README.md  pyproject.toml
media/ffmpeg_with_whisper/add_srt_to_video/: main.py
media/moviepy_demo/: README.md  base.ipynb  pyproject.toml  quick_start.ipynb
message/tweepy/: base.ipynb  pyproject.toml
rpa/uiautomation_demo/: README.md  base.ipynb  calculator.ipynb  pyproject.toml
tests/: README.md  pyproject.toml  requirements.txt
tests/pytest/pytest_demo/: test_fixture_case.py  test_parametrize_case.py
tests/pytest/pytest_mock_demo/: test_magic_mock_param.py  test_mock_method_field.py  test_mock_method_field_mock.py  test_mock_object.py  test_spy_object.py
tool/logfile_demo/: README.md  pyproject.toml
tool/logfile_demo/integrations_demo/: fastapi_integrations.py
tool/logfile_demo/manual_tracing_demo/: base.py
tool/loguru_demo/: README.md  pyproject.toml
tool/loguru_demo/hello_world/: base.ipynb  error_handle.ipynb  structured_log.ipynb
tool/loguru_demo/logger_market/: README.md  log_decorator.py  simple_logger.py
util/file/python_magic_demo/: README.md  base.ipynb  pyproject.toml
web_framework/myfastapi/: README.md  pyproject.toml  requirements.txt
(+827 files in other folders)
