[tool.poetry]
name = "base_venv"
version = "0.1.0"
description = ""
authors = ["colorfulgray0 <colorfulgray0@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
jupyter = "^1.0.0"
pandas = "^2.2.2"
ccxt = "^4.3.80"
akshare = "^1.14.33"
plotly = "^5.22.0"
pandas-datareader = "^0.10.0"
pre-commit = "^3.7.1"
python-telegram-bot = {extras = ["job-queue"], version = "^21.4"}
humanize = "^4.10.0"
kaleido = "0.2.1"
schedule = "^1.2.2"
redis = "^5.0.8"
sqlalchemy = "^2.0.34"
polars = "^1.9.0"
xlsx2csv = "^0.8.3"
xlsxwriter = "^3.2.0"
xmltodict = "^0.14.2"
numpy = "^2.1.2"
python-jenkins = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
