[project]
name = "yfinance_demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.7"
dependencies = [
    "akshare>=1.16.74",
    "docx>=0.2.4",
    "fastmcp>=2.13.1",
    "holidays>=0.75",
    "ipykernel>=6.29.5",
    "pydantic-ai>=0.1.4",
    "yfinance>=0.2.54",
]

[tool.uv.workspace]
members = ["message/wechatpy_demo", "MCP/fastmcp", "cloud_sdk/huawei"]
