[tool.poetry]
name = "data-analysis-demo"
version = "0.1.0"
description = ""
authors = ["colorfulgray0 <colorfulgray0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
jupyter = "^1.0.0"
numpy = "^1.26.4"
numpy-financial = "^1.0.0"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
openpyxl = "^3.1.2"
pandas-datareader = "^0.10.0"
plotly = "^5.19.0"
streamlit = "^1.31.1"
pygwalker = "^0.4.6"
pyarrow = "^15.0.0"
tables = "^3.9.2"
xlsx2csv = "^0.8.2"
xlsxwriter = "^3.2.0"
polars = "^0.20.10"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
