[tool.poetry]
name = "ccxt-demo"
version = "0.1.0"
description = ""
authors = ["colorfulgray0 <colorfulgray0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
langchain = "^0.3.20"
langchain-deepseek = "^0.1.2"
langchain-google-genai = "^2.0.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
