[tool.poetry]
name = "currencyconverter_demo"
version = "0.1.0"
description = ""
authors = ["gray <colorfulgray0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
currencyconverter = "^0.17.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
