[tool.poetry]
name = "ccxt-demo"
version = "0.1.0"
description = ""
authors = ["colorfulgray0 <colorfulgray0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
tweepy = {extras = ["async"], version = "^4.15.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
