[tool.poetry]
name = "uiautomation_demo"
version = "0.1.0"
description = ""
authors = ["colorfulgray0 <colorfulgray0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uiautomation = "^2.0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
