[tool.poetry]
name = "logfile-demo"
version = "0.1.0"
description = ""
authors = ["colorfulgray0 <colorfulgray0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
logfire = {extras = ["fastapi"], version = "^0.29.0"}
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
